# cipher-workshop

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
aes/: Cargo.toml
aes/src/: aes.rs  cbc.rs  constants.rs  iv.rs  lib.rs  sbox.rs  utils.rs
aes/src/block/: block128.rs  block32.rs  mod.rs  secret_block.rs
aes/src/key/: aes_key.rs  expanded.rs  mod.rs  secret_key.rs  subkey.rs  subkeys.rs
aes/src/operations/: column_mix.rs  mod.rs  round_key.rs  row_shift.rs  sbox_lookup.rs
aes/tests/: aes.rs  aes_cbc.rs
cipher-core/: Cargo.toml
cipher-core/src/: error.rs  lib.rs  macros.rs  padding.rs  parsing.rs  traits.rs  types.rs
cipher-core/src/traits/: block_cipher.rs  input_block.rs  mod.rs
cipher-core/src/types/: mod.rs  output.rs
cipher-factory/: Cargo.toml
cipher-factory/src/: algorithm.rs  context.rs  lib.rs  operation.rs  output.rs
cli/: Cargo.toml
cli/src/: args.rs  cipher.rs  error.rs  main.rs  output.rs  value.rs
crypt/: Cargo.toml
crypt/src/: args.rs
des/: Cargo.toml
des/src/: constants.rs  des.rs  lib.rs  utils.rs
des/src/block/: block32.rs  block48.rs  block6.rs  block64.rs  lr.rs  mod.rs  secret_block.rs
des/src/key/: cd56.rs  des_key.rs  half28.rs  key56.rs  mod.rs  secret_int.rs  secret_key.rs  subkey.rs  subkeys.rs
des/tests/: des.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  main.rs  ui.rs
web/: Cargo.toml  README.md
web/end2end/: package-lock.json  package.json  playwright.config.ts
web/end2end/tests/: example.spec.ts
web/src/: app.rs  main.rs
web/src/components/: cipher_form.rs  cipher_form_cbc.rs  config_section.rs  error_box.rs  file_input.rs  iv_input.rs  key_input.rs  mod.rs  output_box.rs  radio_button.rs  text_input.rs
web/src/pages/: aes.rs  aes_cbc.rs  des.rs  footer.rs  header.rs  home.rs  mod.rs  not_found.rs
web/style/: main.scss
