[workspace.package]
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[workspace]
resolver = "2"
members = ["aes", "cipher-core", "cipher-factory", "cli", "des"]

[workspace.dependencies]
aes = { path = "aes" }
color-eyre = "0.6"
cipher-core = { path = "cipher-core" }
cipher-factory = { path = "cipher-factory" }
claims = "0.8"
clap = { version = "4.5", features = ["derive"] }
des = { path = "des" }
rand = "0.9"
rstest = "0.26"
thiserror = "2"
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
