[workspace]
members = ["aes", "cipher-core", "cipher-factory", "cli", "des", "web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[workspace.dependencies]
claims = "0.8"
color-eyre = "0.6"
rand = "0.9"
rstest = "0.26"
thiserror = "2"

[workspace.dependencies.aes]
path = "aes"

[workspace.dependencies.cipher-core]
path = "cipher-core"

[workspace.dependencies.cipher-factory]
path = "cipher-factory"

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.des]
path = "des"

[workspace.dependencies.zeroize]
version = "1.8"
features = ["derive"]

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwarp_used = "warn"
