[package]
name = "cipher-factory"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aes.workspace = true
cipher-core.workspace = true
clap = { workspace = true, optional = true }
des.workspace = true

[features]
default = []
clap = ["dep:clap"]

[lints]
workspace = true
