[package]
name = "cli"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[dependencies]
aes = { workspace = true, optional = true }
cipher-core.workspace = true
clap = { version = "4.5", features = ["derive"] }
color-eyre.workspace = true
des = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["des", "aes"]
des = ["dep:des"]
aes = ["dep:aes"]

[lints]
workspace = true
