[package]
name = "cli"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[dependencies]
aes.workspace = true
cipher-core.workspace = true
clap = { version = "4.5", features = ["derive"] }
color-eyre.workspace = true
des.workspace = true
thiserror.workspace = true

[lints]
workspace = true
