[package]
name = "crypt"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aes.workspace = true
cipher-core.workspace = true
cipher-factory = { workspace = true, features = ["clap"] }
clap.workspace = true
color-eyre.workspace = true
des.workspace = true
thiserror.workspace = true

[lints]
workspace = true
