[package]
name = "tui"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[dependencies]
aes = { workspace = true, optional = true }
anyhow.workspace = true
cipher-core.workspace = true
des = { workspace = true, optional = true }
ratatui = "0.29"
thiserror.workspace = true

[features]
default = ["des", "aes"]
des = ["dep:des"]
aes = ["dep:aes"]

[lints]
workspace = true
