[package]
name = "tui"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[dependencies]
aes = { workspace = true, optional = true }
cipher-core.workspace = true
color-eyre.workspace = true
crossterm = "0.28"
des = { workspace = true, optional = true }
ratatui = "0.29"
thiserror.workspace = true

[features]
default = ["des", "aes"]
des = ["dep:des"]
aes = ["dep:aes"]

[lints]
workspace = true
