[package]
name = "tui"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[dependencies]
aes.workspace = true
cipher-core.workspace = true
color-eyre.workspace = true
crossterm = "0.28"
des.workspace = true
ratatui = "0.29"
thiserror.workspace = true

[lints]
workspace = true
